Rewrite commands